--- a/components/card/Card.module.css
+++ b/components/card/Card.module.css
@@ -14,6 +14,7 @@
   margin: 2em;
   position: relative;
   box-shadow: 3 0 10px rgba(86, 82, 82, 0.8);
+  text-align: center;
 }
 
 .card::before {
@@ -21,6 +22,7 @@
   position: absolute;
   top: 10;
   left: 9;
+  text-align: center;
 }
 
 .card::after {
@@ -29,6 +31,7 @@
   left: -20%;
   font-size: 9em;
   font-weight: 10;
+  text-align: center;
 }
 
 .card img {
@@ -52,6 +55,7 @@
   -webkit-box-shadow: 0px 0px 15px 15px #d7d5e7;
   transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
+  text-align: center;
 }
 
 .card h3 {
