--- a/components/detail/Detail.module.css
+++ b/components/detail/Detail.module.css
@@ -9,6 +9,7 @@
     margin: 10em;
     box-shadow: 3 0 10px rgba(86, 82, 82, 0.8);
     float:left;
+    text-align: center;
   }
   .image{
     float:right;
@@ -19,6 +20,7 @@
     margin: 10em;
     display: flex;
     justify-content: center;
+    text-align: center;
   }
   .center{
     height: 500px;
@@ -29,6 +31,7 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 1em;
+    text-align: center;
   }
   .cssbotom{
     border-radius: 0.5em;
